load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "empty_api.go",
        "get.go",
        "get_account_all.go",
        "get_account_all_parameters.go",
        "get_account_all_responses.go",
        "get_account_all_urlbuilder.go",
        "get_account_at_num.go",
        "get_account_at_num_balance.go",
        "get_account_at_num_balance_parameters.go",
        "get_account_at_num_balance_responses.go",
        "get_account_at_num_balance_urlbuilder.go",
        "get_account_at_num_parameters.go",
        "get_account_at_num_responses.go",
        "get_account_at_num_urlbuilder.go",
        "get_account_my.go",
        "get_account_my_parameters.go",
        "get_account_my_responses.go",
        "get_account_my_urlbuilder.go",
        "get_balance_my.go",
        "get_balance_my_parameters.go",
        "get_balance_my_responses.go",
        "get_balance_my_urlbuilder.go",
        "get_block_at_height.go",
        "get_block_at_height_parameters.go",
        "get_block_at_height_responses.go",
        "get_block_at_height_urlbuilder.go",
        "get_block_hash.go",
        "get_block_hash_parameters.go",
        "get_block_hash_responses.go",
        "get_block_hash_urlbuilder.go",
        "get_parameters.go",
        "get_responses.go",
        "get_tx_hash.go",
        "get_tx_hash_parameters.go",
        "get_tx_hash_responses.go",
        "get_tx_hash_urlbuilder.go",
        "get_txpool_check_hash.go",
        "get_txpool_check_hash_parameters.go",
        "get_txpool_check_hash_responses.go",
        "get_txpool_check_hash_urlbuilder.go",
        "get_urlbuilder.go",
        "post_node_addr.go",
        "post_node_addr_parameters.go",
        "post_node_addr_responses.go",
        "post_node_addr_urlbuilder.go",
        "post_txpool_send.go",
        "post_txpool_send_parameters.go",
        "post_txpool_send_raw_tx.go",
        "post_txpool_send_raw_tx_parameters.go",
        "post_txpool_send_raw_tx_responses.go",
        "post_txpool_send_raw_tx_urlbuilder.go",
        "post_txpool_send_responses.go",
        "post_txpool_send_urlbuilder.go",
    ],
    importpath = "github.com/ngchain/ngcore/restapi/operations",
    visibility = ["//visibility:public"],
    deps = [
        "//models:go_default_library",
        "@com_github_go_openapi_errors//:go_default_library",
        "@com_github_go_openapi_loads//:go_default_library",
        "@com_github_go_openapi_runtime//:go_default_library",
        "@com_github_go_openapi_runtime//middleware:go_default_library",
        "@com_github_go_openapi_runtime//security:go_default_library",
        "@com_github_go_openapi_spec//:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_go_openapi_swag//:go_default_library",
    ],
)
